Add relation data check function